<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="android.view.View"/>
        <variable name="viewmodel" type="net.pelozo.mytasks.ui.tasks.list.TaskListViewmodel"/>
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_tasks"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="18sp"
            android:visibility="@{viewmodel.tasks.empty ? View.VISIBLE : View.GONE}"
            android:gravity="center"/>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/my_tasks"
            app:titleTextColor="@color/white"
            app:menu="@menu/toolbar_task_list"/>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginBottom="16dp"
            app:srcCompat="@android:drawable/ic_input_add"
            app:layout_constraintBottom_toBottomOf="@id/rv_tasks"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/add_task"
            app:tint="@color/white"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_tasks"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:listitem="@layout/item_task"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:visibility="@{viewmodel.tasks.empty ? View.INVISIBLE : View.VISIBLE}"
            tools:visibility="invisible"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>